# 3DTK

./: .gitignore  .gitmodules  .travis.yml  3DTK.files  3DTK.includes  Brewfile  CMakeLists.txt  CMakeLists.txt_windows  CONTRIBUTORS  INSTALL  INSTALL.md  LICENSING  Makefile  Makefile.master  Makefile.options.linux  Makefile.options.linux-icc  Makefile.options.macos  README  README.md  README.plane  README.planes  README.planes.md  README.scanserver  README.scanserver.md  appveyor.yml  know_issues.txt  manifest.xml  package.xml  pixi.toml  showresult.sh  testresult.sh  travisdockerbuild.sh  travismacosbuild.sh
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  py3dtk.cc  test.py
src/calibration/: AprilTag.cc  AprilTagDetector.cc  ArucoDetector.cc  CCTagDetector.cc  CMakeLists.txt  CalibrationPattern.cc  CalibrationToolbox.cc  Calibrator.cc  Chessboard.cc  ChessboardDetector.cc  CirclesGridDetector.cc  DetectionFileHandler.cpp  Detector.cpp  LaserTools.cc  PictureHandler.cc  PinholeModel.cc  calibrate.cc  camcal.cc  createAprilGrid.py  detect.cc  lasercal.cc  planeFromExtrinsics.cc  transformsFromExtrinsics.cc  undistort.cc  undistortImage.cc  undistortPoints.cc
src/collision/: CMakeLists.txt  collision_model.cc  collision_sphere.cc  extract_hull.cc  segment_colliding.cc
src/curvefusion/: CMakeLists.txt  common.cc  curves.cc  extractTrajectory.cc  fusion.cc  tf_broadcaster.cc  timestamps.cc
src/floorplan/: CMakeLists.txt  colorGradient.cc  floorPlan.cc  floorplan_extractor.cc  plane3d.cc  point3d.cc  rotation3d.cc  scene.cc  util.cc  vector3d.cc
src/gps/: CMakeLists.txt  gpstools.cc  rtk2pose.cc  scan2utm.cc
src/grid/: 2DGridder.cc  CMakeLists.txt  Debug.h  docu.tex  grid.cc  grid.h  gridPoint.cc  gridPoint.h  gridWriter.cc  gridWriter.h  gridlines.cc  gridlines.h  hough.cc  hough.h  line.cc  line.h  parcel.cc  parcel.h  parcelinfo.cc  parcelmanager.cc  parcelmanager.h  scanGrid.cc  scanGrid.h  scanToGrid.cc  scanToGrid.h  scanmanager.cc  scanmanager.h  viewpointinfo.cc  viewpointinfo.h
src/mesh/: CMakeLists.txt  README.md  auto_scan_red.cc  calc_normals.cc  mesh.cc  parse_options.cc  poisson.cc  recon.cc  recon_commons.cc  testmesh.cc
src/model/: CMakeLists.txt  candidateOpening.cc  graphicsAlg.cc  labeledPlane3d.cc  model.cc  plane3d.cc  point3d.cc  rotation3d.cc  scene.cc  util.cc  vector3d.cc
src/normals/: CMakeLists.txt  calc_normals.cc  normals.cc  normals_panorama.cc
src/peopleremover/: CMakeLists.txt  common.cc  kitti2scan.py  peopleremover.cc  peopleremover.py  scan_diff.py
src/pmd/: CMakeLists.txt  Makefile  README  cvpmd.cc  cvpmd.h  distortion-cam-6x4.xml  distortion-pmd-6x4.xml  essential-rot.xml  essential-trn.xml  intrinsic-cam-6x4.xml  intrinsic-pmd-6x4.xml  o3d.L32.pcp  pmdWrap.cc  pmdWrap.h  pmdc.conf
src/preg6d/: CMakeLists.txt  cluster.cc  planereg.cc  polyreg.cc
src/qtshow/: CMakeLists.txt  GLWidget.cc  MainWindow.cc  MainWindow.ui  NavPushButton.cc  QtShow.cc  ScanPicker.cc  ScanPicker.ui  SettingsDialog.cc  SettingsDialog.ui  ShortcutsDialog.cc  ShortcutsDialog.ui  main.cc  qtshow.cc  spnav_controller.cc
src/ros/: CMakeLists.txt  bag2scan.cc  bag_listener.cc  calibration.cc  cartographer2scan.cc  ekf_filter.cc  icp6D_node.cc  icp6Dwrapper.cc  importer.cc  nrutil.cc  odometry.cc  powell.cc  ros_listener.cc  scan2bag.cc  tdtkroswrapper.cc
src/scanio/: CMakeLists.txt  calibration.txt  framesreader.cc  helper.cc  old2uosr.py  scan_io.cc  scan_io_b3d.cc  scan_io_faro_xyz_rgbr.cc  scan_io_ks.cc  scan_io_ks_rgb.cc  scan_io_laz.cc  scan_io_leica_xyzr.cc  scan_io_ply.cc  scan_io_pts.cc  scan_io_pts_rgb.cc  scan_io_pts_rgbr.cc  scan_io_pts_rrgb.cc  scan_io_ptsr.cc  scan_io_riegl_rgb.cc  scan_io_riegl_txt.cc  scan_io_rts.cc  scan_io_rxp.cc  scan_io_uos.cc  scan_io_uos_normal.cc  scan_io_uos_rgb.cc  scan_io_uos_rgbr.cc  scan_io_uos_rrgb.cc  scan_io_uos_rrgbt.cc  scan_io_uosc.cc  scan_io_uosr.cc  scan_io_velodyne.cc  scan_io_xyz.cc  scan_io_xyz_rgb.cc  scan_io_xyz_rgba.cc  scan_io_xyz_rgbr.cc  scan_io_xyz_rrgb.cc  scan_io_xyzc.cc  scan_io_xyzr.cc  writer.cc
src/scanserver/: CMakeLists.txt  cacheIO.cc  clientInterface.cc  frame_io.cc  io_types.cc  metrics.cc  pointfilter.cc  scanHandler.cc  scanserver.cc  serverInterface.cc  serverScan.cc  sharedScan.cc  temporaryHandler.cc
src/segmentation/: CMakeLists.txt  FHGraph.cc  FHGraph.cpp  disjoint-set.cpp  fhsegmentation.cc  scan2segments.cc  segment-graph.cc
src/shapes/: CMakeLists.txt  ConfigFileHough.cc  accumulator.cc  caliboard.cc  convexplane.cc  geom_math.cc  hough.cc  hsm3d.cc  image.cc  matchMarker.cc  numberrec.cc  parascan.cc  plane.cc  quadtree.cc  ransac.cc  scan_ransac.cc  shapes.cc  toImage.cc
src/show/: CMakeLists.txt  NurbsPath.cc  NurbsPath.h  PathGraph.cc  PathGraph.h  callbacks_glut.cpp  camera.cc  camera.h  camera.icc  colormanager.cc  colormanager.h  compacttree.cc  cylinderFitting.cc  display.cc  imshow.cc  program_options.cc  scancolormanager.cc  scancolormanager.h  selectionframe.cc  show.cc  show.h  show.icc  show1.icc  show_Boctree.cc  show_Boctree.h  show_animate.cc  show_common.cc  show_gl.cc  show_menu.cc  show_octree.cc  show_octree.h  vertexarray.cc  vertexarray.h  viewcull.c  viewcull.cc  viewcull.h  wxshow.cc
src/slam6d/: Boctree.cc  BruteForceNotATree.cc  CMakeLists.txt  ConfigFileHough.cc  accumulator.cc  allocator.cc  ann_kd.cc  atomize.cc  average6DoFposes.cc  b3dto3d.cc  basicScan.cc  bkd.cc  bkdIndexed.cc  bps2txt.cc  condense.cc  convergence.cc  convexplane.cc  d2tree.cc  e572scan.cpp  elch6D.cc  elch6Deuler.cc  elch6Dquat.cc  elch6Dslerp.cc  elch6DunitQuat.cc  exportPoints.cc  frame_to_graph.cc  frames2kitti.cc  frames2pose.cc  frames2riegl.cc  frames2tum.cc  framesdiff2frames.cc  gapx6D.cc  ghelix6DQ2.cc  graph.cc  graphHOG-Man.cc  graphSlam6D.cc  graphToro.cc  graph_balancer.cc  hough.cc  hsm3d.cc  (+80 more)
src/spherical_quadtree/: CMakeLists.txt  spherical_quadtree.cc  spherical_quadtree.py  test.py
src/srr/: CMakeLists.txt  CMakeLists.txt~  continuousreg.cc  correction.cc  correction.cc~  gapx6D.cc  ghelix6DQ2.cc  (+5 more)
testing/: CMakeLists.txt
(+1021 files in other folders)
